[package]
name = "iron-example"
version = "0.1.0"
authors = ["Mathieu De Coster <mth.decoster@gmail.com>"]

[dependencies]
iron = "0.4"
router = "0.4"
logger = "0.2"
env_logger = "0.3"
rustc-serialize = "0.3"
chrono = { version = "0.2", features = ["rustc-serialize"] }
uuid = { version = "0.2", features = ["v4", "rustc-serialize"] }
